--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-kapt'
+    id "androidx.navigation.safeargs.kotlin"
+    id 'dagger.hilt.android.plugin'
 }
 
 android {
@@ -27,9 +29,9 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-    packagingOptions {
-        exclude 'META-INF/atomicfu.kotlin_module'
-    }
+//    packagingOptions {
+//        exclude 'META-INF/atomicfu.kotlin_module'
+//    }
     kotlinOptions {
         jvmTarget = '1.8'
     }
@@ -48,7 +50,6 @@ dependencies {
         kapt "androidx.room:room-compiler:$rootProject.roomVersion"
         androidTestImplementation "androidx.room:room-testing:$rootProject.roomVersion"
 
-
         // Lifecycle components
         implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$rootProject.lifecycleVersion"
         implementation "androidx.lifecycle:lifecycle-livedata-ktx:$rootProject.lifecycleVersion"
@@ -64,6 +65,8 @@ dependencies {
         implementation "com.google.android.material:material:$rootProject.materialVersion"
 
         // Testing
+        testImplementation "com.google.truth:truth:1.0.1"
+        androidTestImplementation "com.google.truth:truth:1.0.1"
         testImplementation "junit:junit:$rootProject.junitVersion"
         androidTestImplementation "androidx.arch.core:core-testing:$rootProject.coreTestingVersion"
         androidTestImplementation ("androidx.test.espresso:espresso-core:$rootProject.espressoVersion", {
@@ -120,16 +123,17 @@ dependencies {
         testImplementation "org.robolectric:robolectric:4.3.1"
         testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.2.1"
         testImplementation "com.google.truth:truth:1.0.1"
-        testImplementation "org.mockito:mockito-core:3.11.2"
+//        testImplementation "org.mockito:mockito-core:3.11.2"
 
         // Instrumented Unit Tests
+
         androidTestImplementation "junit:junit:4.13.2"
-        androidTestImplementation "com.linkedin.dexmaker:dexmaker-mockito:2.12.1"
+//        androidTestImplementation "com.linkedin.dexmaker:dexmaker-mockito:2.12.1"
         androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.2.1"
         androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
         androidTestImplementation "com.google.truth:truth:1.0.1"
         androidTestImplementation 'androidx.test.ext:junit:1.1.3'
         androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-        androidTestImplementation "org.mockito:mockito-core:3.11.2"
+//        androidTestImplementation "org.mockito:mockito-core:3.11.2"
     }
 }
