Setup Dagger Hilt Dependency Injection for Retrofit and Room Database

--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,4 @@ android.enableJetifier=true
 kotlin.code.style=official
 
 org.gradle.warning.mode=all
+API_KEY = "4743f5aaf0834a388a71b2364fa22784"
