--- a/app/build.gradle
+++ b/app/build.gradle
@@ -106,8 +106,9 @@ dependencies {
         implementation "androidx.activity:activity-ktx:1.4.0"
 
         //Dagger - Hilt
-        implementation "com.google.dagger:hilt-android:2.31-alpha"
-        kapt "com.google.dagger:hilt-android-compiler:2.28-alpha"
+
+        implementation("com.google.dagger:hilt-android:2.38.1")
+        kapt("com.google.dagger:hilt-android-compiler:2.38.1")
 
         implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
         kapt "androidx.hilt:hilt-compiler:1.0.0"
@@ -136,4 +137,8 @@ dependencies {
         androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 //        androidTestImplementation "org.mockito:mockito-core:3.11.2"
     }
+}
+
+kapt {
+    correctErrorTypes = true
 }
